--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,22 @@
-@import "utils";
-@import "fonts";
-@import "typography";
+@import "./utils/vars";
+@import "./utils/reset";
+@import "./utils/normalize";
+@import "./utils/fonts";
+@import "./utils/mixins";
+@import "./utils/extends";
 
-body {
-  background: $c-gray;
-}
+@import "./blocks/page.scss";
+@import "./blocks/header.scss";
+@import "./blocks/logo.scss";
+@import "./blocks/container.scss";
+@import "./blocks/icon.scss";
+@import "./blocks/menu.scss";
+@import "./blocks/footer.scss";
+@import "./blocks/grid.scss";
+@import "./blocks/about.scss";
+@import "./blocks/details.scss";
+@import "./blocks/place.scss";
+@import "./blocks/button.scss";
+@import "./blocks/compare-bikes.scss";
+@import "./blocks/contacs.scss";
+@import "./blocks/form-field.scss";
